tests/parse-errors/general/unnamed_typedef.cx
typedef int;

int main() {
    return 0;
}